--- a/rmf_building_sim_gz_plugins/package.xml
+++ b/rmf_building_sim_gz_plugins/package.xml
@@ -15,7 +15,8 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
-  <depend>rmf_building_sim_common</depend>
+  <depend>rmf_door_msgs</depend>
+  <depend>rmf_lift_msgs</depend>
   <depend>rmf_fleet_msgs</depend>
   <depend>libqt5-core</depend>
   <depend>libqt5-qml</depend>
