--- a/rmf_robot_sim_gz_plugins/package.xml
+++ b/rmf_robot_sim_gz_plugins/package.xml
@@ -19,6 +19,7 @@
   <depend>rmf_fleet_msgs</depend>
   <depend>rmf_building_map_msgs</depend>
   <depend>rmf_robot_sim_common</depend>
+  <depend>rmf_building_sim_gz_plugins</depend>
   <depend>libqt5-core</depend>
   <depend>libqt5-qml</depend>
   <depend>libqt5-quick</depend>
