--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,4 +16,4 @@ jobs:
         rmf_robot_sim_common
         rmf_robot_sim_gz_plugins
       # Foxy and Galactic are deprecated for this package because of the dependency to old gazebo packages
-      dist-matrix: '[{"ros_distribution": "humble", "ubuntu_distribution": "jammy"}, {"ros_distribution": "rolling", "ubuntu_distribution": "jammy"}]'
+      dist-matrix: '[{"ros_distribution": "jazzy", "ubuntu_distribution": "noble"}, {"ros_distribution": "rolling", "ubuntu_distribution": "noble"}]'
