--- a/rmf_building_sim_gz_plugins/CMakeLists.txt
+++ b/rmf_building_sim_gz_plugins/CMakeLists.txt
@@ -18,33 +18,26 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 # find dependencies
+find_package(rmf_door_msgs REQUIRED)
+find_package(rmf_lift_msgs REQUIRED)
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 
-find_package(ignition-cmake2 REQUIRED)
+find_package(gz_sim_vendor REQUIRED)
+find_package(gz-sim REQUIRED)
+find_package(gz_plugin_vendor REQUIRED)
+find_package(gz-plugin REQUIRED)
+find_package(gz_gui_vendor REQUIRED)
+find_package(gz-gui REQUIRED)
+find_package(gz_msgs_vendor REQUIRED)
+find_package(gz-msgs REQUIRED)
+find_package(gz_transport_vendor REQUIRED)
+find_package(gz-transport REQUIRED)
+find_package(gz_rendering_vendor REQUIRED)
+find_package(gz-rendering REQUIRED)
 
-ign_find_package(ignition-gazebo6 REQUIRED)
-set(IGN_GAZEBO_VER 6)
-ign_find_package(ignition-plugin1 REQUIRED COMPONENTS register)
-set(IGN_PLUGIN_VER 1)
-ign_find_package(ignition-common4 REQUIRED)
-set(IGN_COMMON_VER 4)
-ign_find_package(ignition-math6 REQUIRED)
-set(IGN_MATH_VER 6)
-ign_find_package(ignition-gui6 REQUIRED)
-set(IGN_GUI_VER 6)
-ign_find_package(ignition-msgs8 REQUIRED)
-set(IGN_MSGS_VER 8)
-ign_find_package(ignition-transport11 REQUIRED)
-set(IGN_TRANSPORT_VER 11)
-ign_find_package(ignition-rendering6 REQUIRED)
-set(IGN_RENDERING_VER 6)
-ign_find_package(sdformat12 REQUIRED)
-
-
-find_package(rmf_building_sim_common REQUIRED)
 find_package(rmf_fleet_msgs REQUIRED)
-find_package (Qt5
+find_package(Qt5
   COMPONENTS
     Core
     Qml
@@ -63,17 +56,34 @@ add_library(door SHARED src/door.cpp)
 
 target_include_directories(door
   PUBLIC
-    ${rmf_building_sim_common_INCLUDE_DIRS}
-    ${geometry_msgs_INCLUDE_DIRS}
     ${rmf_door_msgs_INCLUDE_DIRS}
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+)
+
+target_link_libraries(door
+  gz-sim::core
+  gz-plugin::core
 )
 
 ament_target_dependencies(door
-  PUBLIC
     rclcpp
-    ignition-gazebo${IGN_GAZEBO_VER}
-    ignition-plugin${IGN_PLUGIN_VER}
-    rmf_building_sim_common
+    rmf_door_msgs
+)
+
+###############################
+# register_component stuff
+###############################
+
+add_library(register_component SHARED src/register_component.cpp)
+
+target_include_directories(register_component
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+)
+
+target_link_libraries(register_component
+  gz-sim::core
+  gz-plugin::core
 )
 
 ###############################
@@ -84,16 +94,20 @@ add_library(lift SHARED src/lift.cpp)
 
 target_include_directories(lift
   PUBLIC
-    ${rmf_building_sim_common_INCLUDE_DIRS}
-    ${geometry_msgs_INCLUDE_DIRS}
+    ${rmf_lift_msgs_INCLUDE_DIRS}
+    ${rmf_door_msgs_INCLUDE_DIRS}
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+)
+
+target_link_libraries(lift
+  gz-sim::core
+  gz-plugin::core
 )
 
 ament_target_dependencies(lift
-  PUBLIC
-    rclcpp
-    ignition-gazebo${IGN_GAZEBO_VER}
-    ignition-plugin${IGN_PLUGIN_VER}
-    rmf_building_sim_common
+  rclcpp
+  rmf_lift_msgs
+  rmf_door_msgs
 )
 
 ###############################
@@ -107,17 +121,17 @@ add_library(crowd_simulator
 target_include_directories(crowd_simulator
   PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  ${rmf_building_sim_common_INCLUDE_DIRS}
   ${rclcpp_INCLUDE_DIRS}
   ${menge_vendor_INCLUDE_DIRS}
-  ${IGNITION-COMMON_INCLUDE_DIRS}
+)
+
+target_link_libraries(crowd_simulator
+  gz-sim::core
+  gz-plugin::core
 )
 
 ament_target_dependencies(crowd_simulator
-  ignition-gazebo${IGN_GAZEBO_VER}
-  ignition-plugin${IGN_PLUGIN_VER}
   rclcpp
-  rmf_building_sim_common
   menge_vendor
 )
 
@@ -132,10 +146,13 @@ add_library(toggle_charging SHARED ${headers_MOC}
   ${resources_RCC}
 )
 
+target_link_libraries(toggle_charging
+  gz-sim::core
+  gz-msgs::core
+  gz-transport::core
+)
+
 ament_target_dependencies(toggle_charging
-  ignition-gui${IGN_GUI_VER}
-  ignition-msgs${IGN_MSGS_VER}
-  ignition-transport${IGN_TRANSPORT_VER}
   Qt5Core
   Qt5Qml
   Qt5Quick
@@ -160,13 +177,16 @@ add_library(toggle_floors SHARED ${headers_MOC}
   ${resources_RCC}
 )
 
+target_link_libraries(toggle_floors
+  gz-sim::core
+  gz-gui::core
+  gz-msgs::core
+  gz-plugin::core
+  gz-rendering::core
+  gz-transport::core
+)
+
 ament_target_dependencies(toggle_floors
-  ignition-gazebo${IGN_GAZEBO_VER}
-  ignition-gui${IGN_GUI_VER}
-  ignition-msgs${IGN_MSGS_VER}
-  ignition-plugin${IGN_PLUGIN_VER}
-  ignition-rendering${IGN_RENDERING_VER}
-  ignition-transport${IGN_TRANSPORT_VER}
   Qt5Core
   Qt5Qml
   Qt5Quick
@@ -185,10 +205,17 @@ target_include_directories(toggle_floors
 # install stuff
 ###############################
 
+ament_export_include_directories(include)
+
 install(
-  TARGETS door lift crowd_simulator toggle_charging toggle_floors
+  TARGETS door lift crowd_simulator toggle_charging toggle_floors register_component
   LIBRARY DESTINATION lib/${PROJECT_NAME}
   ARCHIVE DESTINATION lib/${PROJECT_NAME}
+)
+
+install(
+  DIRECTORY include/
+  DESTINATION include
 )
 
 ament_package()
