--- a/rmf_building_sim_gz_plugins/package.xml
+++ b/rmf_building_sim_gz_plugins/package.xml
@@ -15,13 +15,19 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
-  <depend>rmf_building_sim_common</depend>
+  <depend>rmf_door_msgs</depend>
+  <depend>rmf_lift_msgs</depend>
   <depend>rmf_fleet_msgs</depend>
   <depend>libqt5-core</depend>
   <depend>libqt5-qml</depend>
   <depend>libqt5-quick</depend>
   <depend>menge_vendor</depend>
-  <depend>ignition-fortress</depend>
+  <depend>gz_gui_vendor</depend>
+  <depend>gz_msgs_vendor</depend>
+  <depend>gz_plugin_vendor</depend>
+  <depend>gz_rendering_vendor</depend>
+  <depend>gz_sim_vendor</depend>
+  <depend>gz_transport_vendor</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
