Port outdated actions
Signed-off-by: Luca Della Vedova <lucadv@intrinsic.ai>

--- a/.github/workflows/asan.yaml
+++ b/.github/workflows/asan.yaml
@@ -15,4 +15,4 @@ jobs:
         rmf_building_sim_gz_plugins
         rmf_robot_sim_common
         rmf_robot_sim_gz_plugins
-      dist-matrix: '[{"ros_distribution": "humble", "ubuntu_distribution": "jammy"}]'
+      dist-matrix: '[{"ros_distribution": "rolling", "ubuntu_distribution": "noble"}]'
