--- a/.github/workflows/tsan.yaml
+++ b/.github/workflows/tsan.yaml
@@ -6,43 +6,14 @@ on:
 
 jobs:
   tsan:
-    name: tsan
-    runs-on: ubuntu-latest
-    container:
-      image: rostooling/setup-ros-docker:ubuntu-jammy-latest
-    steps:
-      - name: deps
-        uses: ros-tooling/setup-ros@v0.4
-        with:
-          required-ros-distributions: humble
-      - name: install_clang
-        run: sudo apt update && sudo apt install -y clang clang-tools lld
-      - name: tsan_build_test
-        uses: ros-tooling/action-ros-ci@v0.2
-        id: tsan_build_test
-        env:
-          CC: clang
-          CXX: clang++
-        with:
-          target-ros2-distro: humble
-          # build all packages listed in the meta package
-          package-name: |
-            rmf_building_sim_gz_plugins
-            rmf_robot_sim_common
-            rmf_robot_sim_gz_plugins
-          vcs-repo-file-url: |
-            https://raw.githubusercontent.com/open-rmf/rmf/main/rmf.repos
-          colcon-defaults: |
-            {
-              "build": {
-                "mixin": ["tsan", "lld"],
-                "cmake-args": ["-DCMAKE_BUILD_TYPE=Debug"]
-              }
-            }
-          colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
-      - name: upload_test_stream
-        uses: actions/upload-artifact@v2
-        with:
-          name: colcon-test-logs
-          path: ${{ steps.tsan_build_test.outputs.ros-workspace-directory-name }}/log
-        if: always()
+    name: rmf_simulation
+    uses: open-rmf/rmf_ci_templates/.github/workflows/reusable_build.yaml@main
+    with:
+      # NOTE: Avoid adding comments in the packages lines, this can break some of the called scripts in github actions
+      packages: |
+        rmf_building_sim_gz_plugins
+        rmf_robot_sim_common
+        rmf_robot_sim_gz_plugins
+      # Foxy and Galactic are deprecated for this package because of the dependency to old gazebo packages
+      dist-matrix: '[{"ros_distribution": "rolling", "ubuntu_distribution": "noble"}]'
+      mixin: tsan
