--- a/.github/workflows/tsan.yaml
+++ b/.github/workflows/tsan.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   tsan:
-    name: rmf_simulation
+    name: tsan
     uses: open-rmf/rmf_ci_templates/.github/workflows/reusable_build.yaml@main
     with:
       # NOTE: Avoid adding comments in the packages lines, this can break some of the called scripts in github actions
