--- a/.github/workflows/style.yaml
+++ b/.github/workflows/style.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        docker_image: ['ros:jazzy-ros-base']
+        docker_image: ['ros:rolling-ros-base']
     container:
       image: ${{ matrix.docker_image }}
     steps:
