--- a/.github/workflows/asan.yaml
+++ b/.github/workflows/asan.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   build_and_test:
     name: rmf_simulation
-    uses: open-rmf/rmf_ci_templates/.github/workflows/reusable_asan.yaml@main
+    uses: open-rmf/rmf_ci_templates/.github/workflows/reusable_asan.yaml@luca/bump_artifact
     with:
       # NOTE: Avoid adding comments in the package lines, this can break some of the called scripts in github actions
       packages: |
