--- a/.github/workflows/tsan.yaml
+++ b/.github/workflows/tsan.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   tsan:
     name: tsan
-    uses: open-rmf/rmf_ci_templates/.github/workflows/reusable_build.yaml@main
+    uses: open-rmf/rmf_ci_templates/.github/workflows/reusable_build.yaml@luca/bump_artifact
     with:
       # NOTE: Avoid adding comments in the packages lines, this can break some of the called scripts in github actions
       packages: |
