--- a/rmf_building_sim_gz_plugins/CMakeLists.txt
+++ b/rmf_building_sim_gz_plugins/CMakeLists.txt
@@ -135,7 +135,7 @@ ament_target_dependencies(crowd_simulator
   menge_vendor
 )
 
-if (SKIP_RMF_BUILDING_QT_PLUGINS)
+if (SKIP_QT_MOC_PLUGINS)
   ###############################
   # install stuff
   ###############################
