--- a/rmf_robot_sim_gz_plugins/package.xml
+++ b/rmf_robot_sim_gz_plugins/package.xml
@@ -16,6 +16,7 @@
 
   <depend>rclcpp</depend>
   <depend>eigen</depend>
+  <depend>rmf_dispenser_msgs</depend>
   <depend>rmf_fleet_msgs</depend>
   <depend>rmf_building_map_msgs</depend>
   <depend>rmf_robot_sim_common</depend>
