Port dispenser common into TeleportDispenser
Signed-off-by: Xiyu Oh <xiyu@openrobotics.org>

--- a/rmf_robot_sim_gz_plugins/CMakeLists.txt
+++ b/rmf_robot_sim_gz_plugins/CMakeLists.txt
@@ -37,6 +37,8 @@ find_package(gz-rendering REQUIRED)
 
 find_package(Eigen3 REQUIRED)
 find_package(rmf_fleet_msgs REQUIRED)
+find_package(rmf_dispenser_msgs REQUIRED)
+find_package(rmf_ingestor_msgs REQUIRED)
 find_package(rmf_building_map_msgs REQUIRED)
 find_package(rmf_robot_sim_common REQUIRED)
 find_package(rmf_building_sim_gz_plugins REQUIRED)
@@ -67,6 +69,7 @@ target_link_libraries(teleport_ingestor
 
 ament_target_dependencies(teleport_ingestor
     rmf_fleet_msgs
+    rmf_ingestor_msgs
     rclcpp
     rmf_robot_sim_common
     Eigen3
@@ -94,6 +97,7 @@ target_link_libraries(teleport_dispenser
 
 ament_target_dependencies(teleport_dispenser
     rmf_fleet_msgs
+    rmf_dispenser_msgs
     rclcpp
     rmf_robot_sim_common
     Eigen3
@@ -147,6 +151,8 @@ ament_target_dependencies(slotcar
   rmf_robot_sim_common
   rmf_building_sim_gz_plugins
   rmf_fleet_msgs
+  rmf_dispenser_msgs
+  rmf_ingestor_msgs
   rclcpp
 )
 
@@ -156,6 +162,8 @@ target_include_directories(slotcar
     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
     ${rmf_robot_sim_common_INCLUDE_DIRS}
     ${rmf_fleet_msgs_INCLUDE_DIRS}
+    ${rmf_dispenser_msgs_INCLUDE_DIRS}
+    ${rmf_ingestor_msgs_INCLUDE_DIRS}
     ${rmf_building_map_msgs_INCLUDE_DIRS}
     ${rmf_building_sim_gz_plugins_INCLUDE_DIRS}
 )
