--- a/rmf_robot_sim_gz_plugins/package.xml
+++ b/rmf_robot_sim_gz_plugins/package.xml
@@ -17,6 +17,8 @@
   <depend>rclcpp</depend>
   <depend>eigen</depend>
   <depend>rmf_fleet_msgs</depend>
+  <depend>rmf_dispenser_msgs</depend>
+  <depend>rmf_ingestor_msgs</depend>
   <depend>rmf_building_map_msgs</depend>
   <depend>rmf_robot_sim_common</depend>
   <depend>rmf_building_sim_gz_plugins</depend>
